--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ env:
     - PACKAGE="osilo"
     - INSTALL=true
     - TESTS=true
+    - PINS="osilo:https\://github.com/m-harrison/osilo.git"
   matrix:
     - DISTRO=debian-stable OCAML_VERSION=4.03.0
