--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/ma
 script: bash ./.travis-docker.sh
 env:
   global:
-    - PACKAGE="osilo"
+    - PACKAGE="osilo-apikeygen"
     - INSTALL=true
     - TESTS=true
-    - PINS="osilo:https\://github.com/m-harrison/osilo.git"
   matrix:
     - DISTRO=debian-stable OCAML_VERSION=4.03.0
